--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Manage landing page</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
 
- 
 
 </body>
 </html>
