--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
       <div class="container pt-5 pb-5 align-item-center footer">
         <div class="display-f mb-3 justify-center footer__input col-4-xxl">
           <div class="display-f footer__inbox">
-            <input class="text-white pt-1 pb-1 pl-2 pr-2 br-lg input" type="text" placeholder="Updates in your inbox…">
-            <a class="font-lg bg-primary text-white pt-1 pb-1 pl-3 pr-3 br-lg bg-hover-primary-light-3" href="">Go</a>
+            <input class="text-white pt-1 pb-1 pl-2 pr-2 br-lg input" type="email"  placeholder="Updates in your inbox…" required>
+            <button class="font-lg bg-primary text-white pt-1 pb-1 pl-3 pr-3 br-lg bg-hover-primary-light-3 " >Go</button>
           </div>
           <p class="text-align-center text-white mt-2 o-60 font-md">Copyright 2020. All Rights Reserved</p>
         </div>
@@ -213,9 +213,6 @@
   </footer>
 
 
-
-
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script>
     $(".menu").click(function() {
@@ -258,6 +255,6 @@
   </script>
 
   <script src="removeDots.js"></script>
-    
+  <script src="validation.js"></script>
 </body>
 </html>
